--- a/CetBlog/appsettings.json
+++ b/CetBlog/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CetBlog-8D95EDDA-8FCF-4EF2-8306-9C765D27220B;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {        //PC Name   //Database Name
+    "DefaultConnection": "Server=LUX;Database=CetBlog;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
